--- a/themes/hugo-theme-stack/layouts/partials/sidebar/left.html
+++ b/themes/hugo-theme-stack/layouts/partials/sidebar/left.html
@@ -59,8 +59,10 @@
 
     <ol class="menu" id="main-menu">
         {{ $currentPage := . }}
+        {{ $siteTitle := .Site.Title }}
         {{ range .Site.Menus.main }}
         {{ $active := or (eq $currentPage.Title .Name) (or ($currentPage.HasMenuCurrent "main" .) ($currentPage.IsMenuCurrent "main" .)) }}
+        {{ $active := or ($active) (and (eq $currentPage.Title $siteTitle ) (eq .Identifier "home")) }}
         <li {{ if $active }} class='current' {{ end }}>
             <a href='{{ .URL }}' {{ if eq .Params.newTab true }}target="_blank"{{ end }}>
                 {{ $icon := default .Pre .Params.Icon }}
