--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -2,332 +2,264 @@
 
 // 页面基本配色
 :root {
-    // 全局顶部边距
-    --main-top-padding: 30px;
-    // 全局卡片圆角
-    --card-border-radius: 25px;
-    // 标签云卡片圆角
-    --tag-border-radius: 8px;
-    // 卡片间距
-    --section-separation: 40px;
-    // 全局字体大小
-    --article-font-size: 1.8rem;
+  // 全局顶部边距
+  --main-top-padding: 30px;
+  // 全局卡片圆角
+  --card-border-radius: 15px;
+  // 标签云卡片圆角
+  --tag-border-radius: 8px;
+  // 卡片间距
+  --section-separation: 40px;
+  // 全局字体大小
+  --article-font-size: 1.8rem;
+  // 行内代码背景色
+  --code-background-color: #f8f8f8;
+  // 行内代码前景色
+  --code-text-color: #070706;
+
+  // 暗色模式下样式
+  &[data-scheme="dark"] {
     // 行内代码背景色
-    --code-background-color: #f8f8f8;
+    --code-background-color: #ff6d1b17;
     // 行内代码前景色
-    --code-text-color: #e96900;
-    // 暗色模式下样式
-    &[data-scheme="dark"] {
-      // 行内代码背景色
-      --code-background-color: #ff6d1b17;
-      // 行内代码前景色
-      --code-text-color: #e96900;
-    }
+    --code-text-color: #ffffff;
   }
-  
-  //------------------------------------------------------
-  // 修复引用块内容窄页面显示问题
-  a {
-    word-break: break-all;
+}
+
+//------------------------------------------------------
+// 修复引用块内容窄页面显示问题
+a {
+  word-break: break-all;
+}
+
+code {
+  word-break: break-all;
+}
+
+//---------------------------------------------------
+// 文章内容图片圆角阴影
+.article-page .main-article .article-content {
+  img {
+    max-width: 96% !important;
+    height: auto !important;
+    border-radius: 8px;
   }
-  
-  code {
-    word-break: break-all;
+}
+
+//------------------------------------------------
+// 文章内容引用块样式
+.article-content {
+  blockquote {
+    border-left: 6px solid #358b9a1f !important;
+    background: #3a97431f;
   }
-  
-  //---------------------------------------------------
-  // 文章内容图片圆角阴影
-  .article-page .main-article .article-content {
-    img {
-      max-width: 96% !important;
-      height: auto !important;
-      border-radius: 8px;
+}
+
+// ---------------------------------------
+// 代码块基础样式修改
+.highlight {
+  max-width: 102% !important;
+  background-color: var(--pre-background-color);
+  padding: var(--card-padding);
+  position: relative;
+  border-radius: 20px;
+  margin-left: -7px !important;
+  margin-right: -12px;
+  box-shadow: var(--shadow-l1) !important;
+
+  &:hover {
+    .copyCodeButton {
+      opacity: 1;
     }
-  }
-  
-  //------------------------------------------------
-  // 文章内容引用块样式
-  .article-content {
-    blockquote {
-      border-left: 6px solid #358b9a1f !important;
-      background: #3a97431f;
-    }
-  }
-  // ---------------------------------------
-  // 代码块基础样式修改
-  .highlight {
-    max-width: 102% !important;
-    background-color: var(--pre-background-color);
-    padding: var(--card-padding);
-    position: relative;
-    border-radius: 20px;
-    margin-left: -7px !important;
-    margin-right: -12px;
-    box-shadow: var(--shadow-l1) !important;
-  
-    &:hover {
-      .copyCodeButton {
-        opacity: 1;
-      }
-    }
-  
-    // keep Codeblocks LTR
-    [dir="rtl"] & {
-      direction: ltr;
-    }
-  
-    pre {
-      margin: initial;
-      padding: 0;
-      margin: 0;
-      width: auto;
-    }
-  }
-  
-  // light模式下的代码块样式调整
-  [data-scheme="light"] .article-content .highlight {
-    background-color: #fff9f3;
-  }
-  
-  [data-scheme="light"] .chroma {
-    color: #ff6f00;
-    background-color: #fff9f3cc;
-  }
-  
-  //-------------------------------------------
-  // 设置选中字体的区域背景颜色
-  //修改选中颜色
-  ::selection {
-    color: #fff;
-    background: #34495e;
-  }
-  
-  a {
-    text-decoration: none;
-    color: var(--accent-color);
-  
-    &:hover {
-      color: var(--accent-color-darker);
-    }
-  
-    &.link {
-      color: #4288b9ad;
-      font-weight: 600;
-      padding: 0 2px;
-      text-decoration: none;
-      cursor: pointer;
-  
-      &:hover {
-        text-decoration: underline;
-      }
-    }
-  }
-  
-  //-------------------------------------------------
-  //文章封面高度更改
-  .article-list article .article-image img {
-    width: 100%;
-    height: 150px;
-    object-fit: cover;
-  
-    @include respond(md) {
-      height: 200px;
-    }
-  
-    @include respond(xl) {
-      height: 305px;
-    }
-  }
-  
-  //---------------------------------------------------
-  // 全局页面布局间距调整
-  .main-container {
-    min-height: 100vh;
-    align-items: flex-start;
-    padding: 0 15px;
-    gap: var(--section-separation);
-    padding-top: var(--main-top-padding);
-  
-    @include respond(md) {
-      padding: 0 37px;
-    }
-  }
-  
-  //--------------------------------------------------
-  //页面三栏宽度调整
-  .container {
-    margin-left: auto;
-    margin-right: auto;
-  
-    .left-sidebar {
-      order: -3;
-      max-width: var(--left-sidebar-max-width);
-    }
-  
-    .right-sidebar {
-      order: -1;
-      max-width: var(--right-sidebar-max-width);
-  
-      /// Display right sidebar when min-width: lg
-      @include respond(lg) {
-        display: flex;
-      }
-    }
-  
-    &.extended {
-      @include respond(md) {
-        max-width: 1024px;
-        --left-sidebar-max-width: 25%;
-        --right-sidebar-max-width: 22% !important;
-      }
-  
-      @include respond(lg) {
-        max-width: 1280px;
-        --left-sidebar-max-width: 20%;
-        --right-sidebar-max-width: 30%;
-      }
-  
-      @include respond(xl) {
-        max-width: 1453px; //1536px;
-        --left-sidebar-max-width: 15%;
-        --right-sidebar-max-width: 25%;
-      }
-    }
-  
-    &.compact {
-      @include respond(md) {
-        --left-sidebar-max-width: 25%;
-        max-width: 768px;
-      }
-  
-      @include respond(lg) {
-        max-width: 1024px;
-        --left-sidebar-max-width: 20%;
-      }
-  
-      @include respond(xl) {
-        max-width: 1280px;
-      }
-    }
-  }
-  
-  //-------------------------------------------------------
-  //全局页面小图片样式微调
-  .article-list--compact article .article-image img {
-    width: var(--image-size);
-    height: var(--image-size);
-    object-fit: cover;
-    border-radius: 17%;
   }
 
-//  ~\blog\assets\scss\custom.scss
+  // keep Codeblocks LTR
+  [dir="rtl"] & {
+    direction: ltr;
+  }
+
+  pre {
+    margin: initial;
+    padding: 0;
+    margin: 0;
+    width: auto;
+  }
+}
+
+// light模式下的代码块样式调整
+[data-scheme="light"] .article-content .highlight {
+  background-color: #ffffff;
+}
+
+[data-scheme="light"] .chroma {
+  color: #000000;
+  background-color: #fff9f300;
+}
+
+//-------------------------------------------
+// 设置选中字体的区域背景颜色
+//修改选中颜色
+::selection {
+  color: #fff;
+  background: #34495e;
+}
+
+a {
+  text-decoration: none;
+  color: var(--accent-color);
+
+  &:hover {
+    color: var(--accent-color-darker);
+  }
+
+  &.link {
+    color: #4288b9ad;
+    font-weight: 600;
+    padding: 0 2px;
+    text-decoration: none;
+    cursor: pointer;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+//-------------------------------------------------
+//文章封面高度更改
+.article-list article .article-image img {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+
+  @include respond(md) {
+    height: 200px;
+  }
+
+  @include respond(xl) {
+    height: 305px;
+  }
+}
+
+//---------------------------------------------------
+// 全局页面布局间距调整
+.main-container {
+  min-height: 100vh;
+  align-items: flex-start;
+  padding: 0 15px;
+  gap: var(--section-separation);
+  padding-top: var(--main-top-padding);
+
+  @include respond(md) {
+    padding: 0 37px;
+  }
+}
+
+//--------------------------------------------------
+//页面三栏宽度调整
+.container {
+  margin-left: auto;
+  margin-right: auto;
+
+  .left-sidebar {
+    order: -3;
+    max-width: var(--left-sidebar-max-width);
+  }
+
+  .right-sidebar {
+    order: -1;
+    max-width: var(--right-sidebar-max-width);
+
+    /// Display right sidebar when min-width: lg
+    @include respond(lg) {
+      display: flex;
+    }
+  }
+
+  &.extended {
+    @include respond(md) {
+      max-width: 1024px;
+      --left-sidebar-max-width: 25%;
+      --right-sidebar-max-width: 22% !important;
+    }
+
+    @include respond(lg) {
+      max-width: 1280px;
+      --left-sidebar-max-width: 20%;
+      --right-sidebar-max-width: 30%;
+    }
+
+    @include respond(xl) {
+      max-width: 1453px; //1536px;
+      --left-sidebar-max-width: 15%;
+      --right-sidebar-max-width: 25%;
+    }
+  }
+
+  &.compact {
+    @include respond(md) {
+      --left-sidebar-max-width: 25%;
+      max-width: 768px;
+    }
+
+    @include respond(lg) {
+      max-width: 1024px;
+      --left-sidebar-max-width: 20%;
+    }
+
+    @include respond(xl) {
+      max-width: 1280px;
+    }
+  }
+}
+
+//-------------------------------------------------------
+//全局页面小图片样式微调
+.article-list--compact article .article-image img {
+  width: var(--image-size);
+  height: var(--image-size);
+  object-fit: cover;
+  border-radius: 17%;
+}
+
 
 // --------------------------------
 // 菜单栏样式
 // 下拉菜单改圆角样式
 .menu {
-    padding-left: 0;
-    list-style: none;
-    flex-direction: column;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    flex-grow: 1;
-    font-size: 1.6rem;
-    background-color: var(--card-background);
-  
-    box-shadow: var(--shadow-l2); //改个阴影
-    display: none;
-    margin: 0; //改为0
-    border-radius: 10px; //加个圆角
-    padding: 30px 30px;
-  
-    @include respond(xl) {
-      padding: 15px 0;
-    }
-  
-    &,
-    .menu-bottom-section {
-      gap: 30px;
-  
-      @include respond(xl) {
-        gap: 25px;
-      }
-    }
-  
-    &.show {
-      display: flex;
-    }
-  
-    @include respond(md) {
-      align-items: flex-end;
-      display: flex;
-      background-color: transparent;
-      padding: 0;
-      box-shadow: none;
-      margin: 0;
-    }
-  
-    li {
-      position: relative;
-      vertical-align: middle;
-      padding: 0;
-  
-      @include respond(md) {
-        width: 100%;
-      }
-  
-      svg {
-        stroke-width: 1.33;
-  
-        width: 20px;
-        height: 20px;
-      }
-  
-      a {
-        height: 100%;
-        display: inline-flex;
-        align-items: center;
-        color: var(--body-text-color);
-        gap: var(--menu-icon-separation);
-      }
-  
-      span {
-        flex: 1;
-      }
-  
-      &.current {
-        a {
-          color: var(--accent-color);
-          font-weight: bold;
-        }
-      }
+  overflow-y: visible;
+  font-size: 1.6rem;
+
+  li {
+    transition: .5s ease;
+
+    &:hover {
+      transform: scale(1.1, 1.1);
     }
   }
-
-//  ~\blog\assets\scss\custom.scss
+}
 
 //--------------------------------------------------
 //归档页面双栏
 /* 归档页面两栏 */
 @media (min-width: 1024px) {
-    .article-list--compact {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      background: none;
-      box-shadow: none;
-      gap: 1rem;
-  
-      article {
-        background: var(--card-background);
-        border: none;
-        box-shadow: var(--shadow-l2);
-        margin-bottom: 8px;
-        border-radius: 16px;
-      }
+  .article-list--compact {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background: none;
+    box-shadow: none;
+    gap: 1rem;
+
+    article {
+      background: var(--card-background);
+      border: none;
+      box-shadow: var(--shadow-l2);
+      margin-bottom: 8px;
+      border-radius: 16px;
     }
   }
+}
 
-  //  ~\blog\assets\scss\custom.scss
 
 //--------------------------------------------------
 //引入左上角返回按钮
@@ -385,78 +317,141 @@ main.main {
   }
 }
 
-//  ~\blog\assets\scss\custom.scss
 
 //--------------------------------------------------
 //引入左上角返回按钮
 .back-home {
-    background: var(--card-background);
-    border-radius: var(--tag-border-radius);
-    color: var(--card-text-color-tertiary);
-    margin-right: 0.1rem;
-    margin-top: 24px;
-    display: inline-flex;
-    align-items: center;
-    font-size: 1.4rem;
-    text-transform: uppercase;
-    padding: 10px 20px 10px 15px;
-    transition: box-shadow 0.3s ease;
-    box-shadow: var(--shadow-l3);
-  
-    &:hover {
-      box-shadow: var(--shadow-l2);
-    }
-  
-    svg {
-      margin-right: 5px;
-      width: 20px;
-      height: 20px;
-    }
-  
-    span {
-      font-weight: 500;
-      white-space: nowrap;
-    }
+  background: var(--card-background);
+  border-radius: var(--tag-border-radius);
+  color: var(--card-text-color-tertiary);
+  margin-right: 0.1rem;
+  margin-top: 24px;
+  display: inline-flex;
+  align-items: center;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  padding: 10px 20px 10px 15px;
+  transition: box-shadow 0.3s ease;
+  box-shadow: var(--shadow-l3);
+
+  &:hover {
+    box-shadow: var(--shadow-l2);
   }
-  
-  .main-container .right-sidebar {
-    order: 2;
-    max-width: var(--right-sidebar-max-width);
-  
-    /// Display right sidebar when min-width: lg
-    @include respond(lg) {
-      display: flex;
-    }
+
+  svg {
+    margin-right: 5px;
+    width: 20px;
+    height: 20px;
   }
-  
-  main.main {
-    order: 1;
-    min-width: 0;
-    max-width: 100%;
-    flex-grow: 1;
+
+  span {
+    font-weight: 500;
+    white-space: nowrap;
+  }
+}
+
+.main-container .right-sidebar {
+  order: 2;
+  max-width: var(--right-sidebar-max-width);
+
+  /// Display right sidebar when min-width: lg
+  @include respond(lg) {
     display: flex;
-    flex-direction: column;
-    gap: var(--section-separation);
-  
-    @include respond(md) {
-      padding-top: var(--main-top-padding);
+  }
+}
+
+main.main {
+  order: 1;
+  min-width: 0;
+  max-width: 100%;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: var(--section-separation);
+
+  @include respond(md) {
+    padding-top: var(--main-top-padding);
+  }
+}
+
+
+.widget--toc {
+  #TableOfContents {
+    max-height: 65vh;
+
+    ol,
+    ul {
+      list-style-type: none;
+    }
+
+    li {
+      margin: 10px 10px;
+
+      &>ol,
+      &>ul {
+        margin-top: 10px;
+        padding-left: 10px;
+        margin-bottom: -5px;
+
+        &>li:last-child {
+          margin-bottom: 0;
+        }
+      }
     }
   }
 
-//  ~\blog\assets\scss\custom.scss
-
-//----------------------------------------------------------
-//为代码块顶部添加macos样式
-.article-content {
-  .highlight:before {
-    content: "";
-    display: block;
-    background: url(/img/code-header.svg);
-    height: 32px;
-    width: 100%;
-    background-size: 57px;
-    background-repeat: no-repeat;
-    margin-bottom: 5px;
-    background-position: -1px 2px;
+  ::-webkit-scrollbar {
+    width: 20px;
   }
+
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+  }
+}
+
+html {
+  ::-webkit-scrollbar {
+    width: 20px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+  }
+}
+
+
+//---------------------------------------------------------
+//首页欢迎板块样式
+.welcome {
+  color: var(--card-text-color-main);
+  background: var(--card-background);
+  box-shadow: var(--shadow-l2);
+  border-radius: 30px;
+  display: inline-block;
+}
+
+body, .article-content {
+  font-family: 'Noto Serif SC', serif;
 }
