--- a/themes/hugo-theme-stack/layouts/partials/footer/components/custom-font.html
+++ b/themes/hugo-theme-stack/layouts/partials/footer/components/custom-font.html
@@ -1,4 +1,4 @@
-<script>
+<!-- script>
     (function () {
         const customFont = document.createElement('link');
         customFont.href = "https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap";
@@ -8,4 +8,8 @@
 
         document.head.appendChild(customFont);
     }());
-</script>
+</script -->
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@500&display=swap" rel="stylesheet">
